Stop gap measure for landscape phones and tablets

--- a/src/client/app/admin/components/dashboard/dashboard-item/dashboard-item.pcss
+++ b/src/client/app/admin/components/dashboard/dashboard-item/dashboard-item.pcss
@@ -46,7 +46,7 @@
   }
 }
 
-@media (min-width: env(--device-width-tablet-min)) {
+@media (min-width: env(--device-width-tablet-min)) and (hover: hover) {
   .dashboard-items-container {
     border-bottom: none;
     display: grid;
