--- a/src/client/app/admin/components/resource-sites/resource-site/resource-site.pcss
+++ b/src/client/app/admin/components/resource-sites/resource-site/resource-site.pcss
@@ -35,7 +35,7 @@
   }
 }
 
-@media(min-width: env(--device-width-tablet-min)) {
+@media(min-width: env(--device-width-tablet-min)) and (hover: hover) {
   .resource-sites-container {
     border-bottom: none;
     display: grid;
