--- a/src/client/app/admin/components/shared/removable-item/removable-item.pcss
+++ b/src/client/app/admin/components/shared/removable-item/removable-item.pcss
@@ -65,7 +65,7 @@
 }
 
 
-@media (min-width: env(--device-width-tablet-min)) {
+@media (min-width: env(--device-width-tablet-min)) and (hover: hover) {
   .removable-item-controls {
     &:hover {
       & .remove {
